--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ header{
     border-style: solid;
     border-color: #6a3631;
     margin: 25px 25px 50px 50px;
-    image-orientation: ;
+    image-orientation: center;
 }
 h1{
     text-align: center;
